Bug 786903 - restore typedArray(otherTypedArray) initialization fastpath; r=sfink